[Vinay Jadaun] - Add. Rendering Image by Interpolication

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,17 @@
-
+div{
+    width:500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 h2{
     font-size:45px;
+}
+img{
+    width: 200px;
+    cursor: pointer;
+    border:2px solid lightblue;
+    border-radius: 10px;
+    margin:50px;
 }
