[Vinay Jadaun] - Add. Image Redirection done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
     <div>
-       <img [src]="ImageURL" alt="3F8DupV.jpg" />
+       <img [src]="ImageURL" (click)="onImageClick($event)" alt="3F8DupV.jpg" />
         <h2>{{hello}}</h2>
     </div>
   
-    
+  
    
