--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,3 +15,15 @@ img{
     border-radius: 10px;
     margin:50px;
 }
+input{
+    width: 500px;
+    height: 35px;
+    margin: 35px;
+    color:rgb(152, 152, 152);
+    outline: none;
+    border-radius: 50px;
+    border:none;
+    text-align: center;
+
+
+}
